<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.kiev.driver.aos.viewmodel.MainViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:paddingBottom="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2" />

        <View
            android:id="@+id/vgl_top_half"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/vgl_half"
            android:layout_width="0dp"
            android:layout_height="0.1dp"/>

        <View
            android:id="@+id/vgl_half"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/gl_bottom"
            android:layout_width="0dp"
            android:layout_height="0.1dp"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_bottom"
            app:layout_constraintGuide_end="@dimen/main_bottom_btn_height"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!--=================================================-->
        <!--빈차 상태-->
        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_vacancy"
            android:visibility="visible"
            app:constraint_referenced_ids="btn_boarding,btn_resting,tv_vacancy,btn_waiting_zone,btn_waiting_call_list,tv_number_plate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_number_plate"
            tools:text="20바8282"
            android:text="@{viewModel.configuration.getCarNumber()}"
            android:textColor="@color/colorYellow01"
            android:textSize="22dp"
            android:gravity="center"
            android:background="@drawable/hs_main_carnum_bg"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toTopOf="@+id/vgl_top_half"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_vacancy"
            android:text="@string/main_state_vacancy_msg"
            android:textColor="@color/colorGray03"
            android:textSize="@dimen/main_status_vacancy_text_size"
            style="@style/MainStateTextStyle"
            app:layout_constraintTop_toBottomOf="@+id/gl_top"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/btn_waiting_zone"
            android:text="@string/main_btn_waiting_zone"
            tools:text="대기장소"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="22dp"
            android:textColor="@color/selector_tc_main_middle_btn"
            android:background="@drawable/selector_bg_main_middle_btn"
            android:drawableStart="@drawable/hs_main_pin_icon"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:gravity="center"
            android:minWidth="140dp"
            android:maxWidth="328dp"
            android:ellipsize="end"
            android:layout_marginBottom="22dp"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintTop_toBottomOf="@+id/vgl_half"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btn_waiting_call_list"
            android:layout_width="wrap_content"
            android:layout_height="56dp"/>
        <Button
            android:id="@+id/btn_waiting_call_list"
            android:text="@string/main_btn_waiting_call_list"
            android:textSize="22dp"
            android:textColor="@color/selector_tc_main_middle_btn"
            android:background="@drawable/selector_bg_main_middle_btn"
            android:drawableStart="@drawable/hs_main_calllist_icon"
            android:drawablePadding="-14dp"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:gravity="center"
            android:minWidth="140dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_waiting_zone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/gl_bottom"
            android:layout_width="wrap_content"
            android:layout_height="56dp"/>
        <Button
            android:id="@+id/btn_boarding"
            android:text="@string/main_btn_boarding"
            style="@style/MainBottomLeftButtonStyle"
            android:layout_marginEnd="4dp"
            app:layout_constraintTop_toBottomOf="@+id/gl_bottom"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_resting"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <Button
            android:id="@+id/btn_resting"
            android:text="@string/main_btn_resting"
            style="@style/MainBottomRightButtonStyle"
            app:layout_constraintTop_toBottomOf="@+id/gl_bottom"
            app:layout_constraintStart_toEndOf="@+id/btn_boarding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>



        <!--=================================================-->
        <!--휴식 상태-->
        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_resting"
            android:visibility="gone"
            tools:visibility="visible"
            app:constraint_referenced_ids="btn_receive_call,tv_resting,tv_resting2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatTextView
            tools:visibility="visible"
            android:id="@+id/tv_resting"
            android:text="@string/main_state_resting_msg"
            android:textColor="@color/colorGreen01"
            style="@style/MainStateTextStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gl_top"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:visibility="gone"
            android:id="@+id/tv_resting2"
            android:text="@string/main_state_resting_msg2"
            android:textColor="@color/colorGray04"
            android:textSize="24dp"
            style="@style/TextViewStyle_bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_resting"
            android:gravity="top|center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <Button
            tools:visibility="gone"
            android:id="@+id/btn_receive_call"
            android:text="@string/main_btn_receive_call"
            style="@style/MainBottomButtonStyle"
            app:layout_constraintTop_toBottomOf="@+id/gl_bottom"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>


